--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "cors": "2.8.5",
     "dotenv": "16.0.3",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.6"
   },
   "devDependencies": {
     "nodemon": "2.0.20"
